[package]
name = "greatway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-web-httpauth = "0.8.2"
bcrypt = "0.15.1"
bytes = "1.7.2"
dotenv = "0.15.0"
futures-util = "0.3.30"
http = "1.1.0"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
