[package]
name = "greatway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-web-httpauth = "0.8.2"
bcrypt = "0.15.1"
bytes = "1.7.2"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures-util = "0.3.30"
http = "1.1.0"
jsonwebtoken = "9.3.0"
log = "0.4.22"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
